	subprojects' files and libraries.
	(addFiles:forKey:notify:): Add path to PCSearchLibs when adding 
	libraries.

	* Library/PCProjectInspector.m: Observe project dictionary changes and
	reread it.

	* Library/PCProjectBrowser.m:
	(doubleClick:): Don't try to open libraries.

	* Modules/ApplicationProject/Resources/Main.gorm: Connect delegate to
	AppController (bug #11478).

2004-12-24 Serg Stoyan <stoyan255@ukr.net>

	* "Build Tool" setting from Project Inspector was moved to PC 
	Preferences.

	* Implemented support of document-based applications
	
	* Added "Document types" panel into Project Inspector

	* Library/PCFileManager.m: Fix crashing while calling "Add Files" 
	panel.

2004-10-14 Serg Stoyan <stoyan255@ukr.net>

	* Fixed interface (*.gorm) files wrt to latest GORM changes.

2004-07-22 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCButton.m: Rewritten tooltips code. Almost ready for 
	incorporation into NSView.

	* Library/PCProjectBuilder.m: Use new tooltip code and remove old
	style code.
	* Library/PCProjectLauncher.m: ditto.
	* Library/PCProjectWindow.m: ditto.
	
	*Images/ButtonTile.tiff: removed.
	
2004-07-15 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProject.m: 
	(projectFileForFile:forKey:): Fix recognizing of subproject files.
	
	* Library/PCProjectManager.m: 
	(addProjectFiles):ditto.
	
	* Update all GORM files with latest CVS GORM version.
	
	* Resources/Preferences.gorm: Fix Auto-Save slider.
	
2004-07-14 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCButton.m: PCButtonCell removed.
	(initWithFrame:): [self setCell:] removed. [_cell setGradientType:]
	added.
	
2004-07-04 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProject.m:
	(projectFileFromFile:forKey:): If adding files from subproject to
	project add it with relative path to project's one.

	* Modules/ApplicationProject/PCAppProject.m:
	(writeMakefile): Do not add "Resources/" prefix if resource file
	is part of subproject.
	
	* Modules/BundleProject/PCBundleProject.m: 