@@ -20,6 +20,13 @@
 	* Modules/ApplicationProject/Resources/Main.gorm: Connect delegate to
 	AppController (bug #11478).
 
+	* Library/PCProjectEditor.m:
+	(editorForFile:categoryPath:windowed:): Call orderFrontEditorForFile:
+	to show already opened file (bug #11448).
+
+	* Library/PCEditor.m:
+	(_createEditorViewWithFrame:): Remove return of autoreleased ivar.
+
 2004-12-24 Serg Stoyan <stoyan255@ukr.net>
 
 	* "Build Tool" setting from Project Inspector was moved to PC 
